B&L QA/objects/Joint_Field_Work__c.object
<CustomObject>
    <description>IndiaSU Object to hold feedback of joint field work done by manager and sales/service executive</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>IndiaSU field to collect activity date of the call</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agenda_Followed_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Agenda Followed Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bringing_Value_in_OT_Selling_in_surgery__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Bringing Value in OT- Selling in surgery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCKM_Market_Intelligence__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>CCKM/Market Intelligence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Objective__c</fullName>
        <description>IndiaSU field to collect object of the call made</description>
        <label>Call Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Return_Reason__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Create Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Products_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Demo Products Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_products_effictivily_used__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Demo products effictivily used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discussed_B_L_Activities_MDA_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Discussed B&amp;L Activities MDA Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discussed_B_L_Activities_MDA__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Discussed B&amp;L Activities, MDA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_Goal1__c</fullName>
        <description>IndiaSU field to collect due date for the goal1</description>
        <label>Goal1 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Goal2__c</fullName>
        <description>IndiaSU field to collect due date for the goal 2</description>
        <label>Goal2 Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enhanced_Professional_Image_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Enhanced Professional Image Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Professional_Image__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Enhanced Professional Image</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exceeding_OP_Goal_YTD__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Exceeding OP Goal YTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Work_Scheduling__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Field Work Scheduling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focused_on_Product_to_clinical_discussio__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Focused on Product to clinical discussio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal1_Activity1_Due_Date__c</fullName>
        <description>IndiaSU field to collect due date for the activity 1 for Goal 1</description>
        <label>Goal1 Activity1 Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal1_Activity1__c</fullName>
        <description>IndiaSU field to collect activity 1 planned for the manager for the sales/service executive for Goal 1</description>
        <label>Goal1 Activity1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal1_Activity2_Due_Date__c</fullName>
        <description>IndiaSU field to collect due date for the activity 2 for Goal 1</description>
        <label>Goal1 Activity2 Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal1_Activity2__c</fullName>
        <description>IndiaSU field to collect activity 2 planned for the manager for the sales/service executive for Goal 2</description>
        <label>Goal1 Activity2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal1_Activity3_Due_Date__c</fullName>
        <description>IndiaSU field to collect due date for the activity 3 for Goal 1</description>
        <label>Goal1 Activity3 Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal1_Activity3__c</fullName>
        <description>IndiaSU field to collect activity 3 planned for the manager for the sales/service executive for Goal 1</description>
        <label>Goal1 Activity3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal1__c</fullName>
        <description>IndiaSU field to collect goal 1 set by the manager for the sales/service executive</description>
        <label>Goal1 Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal2__c</fullName>
        <description>IndiaSU field to collect goal 2 set by the manager for the sales/service executive</description>
        <label>Goal2 Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HPS_Inputs_Utilisation__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>HPS , Inputs Utilisation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Levaraged_with_Partners_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Levaraged with Partners Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levaraged_with_Partners__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Levaraged with Partners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Summary__c</fullName>
        <description>IndiaSU field to collect details of manager view point</description>
        <label>Manager Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IndiaSU field to collect manager name</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Join_Call_Coaching1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Sale_Opportunity_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>New Sale Opportunity Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OT_Working_Details__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>OT Working Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OT_del__c</fullName>
        <label>OT Working Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_of_Call_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Objective of Call Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_of_Call__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Objective of Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Not Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Visit</label>
        <referenceTo>Physician_Visit__c</referenceTo>
        <relationshipLabel>Joint Field Work</relationshipLabel>
        <relationshipName>Joint_Field_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IndiaSU field to collect physician who was met during the joint call</description>
        <label>Physician</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Joint Field Work</relationshipLabel>
        <relationshipName>Joint_Field_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Call_Analysis_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Post Call Analysis Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_call_analysis__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Post Call Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_call_Planning__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Pre-call Planning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_coaching_date__c</fullName>
        <description>IndiaSU field to collect previous coaching date</description>
        <label>Previous coaching date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probed_new_sales_opportunity__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Probed new sales opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Service_Executive_Summary__c</fullName>
        <description>IndiaSU field to collect details of sales/service executive view piont on the feedback</description>
        <label>Sales/Service Executive Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Service_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IndiaSU field to collect sales/service executive name</description>
        <label>Sales/Service Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Join_Call_Coaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent_del__c</fullName>
        <description>IndiaSU field to collect the time spent by manager during the call</description>
        <label>Time Spent in Mns</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_of_Laptop_Comments__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Use of Laptop Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_of_Laptop_effective__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Use of Laptop effective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Well_Prepared__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Well Prepared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_agenda_closely_followed_4_days__c</fullName>
        <description>IndiaSU field to collect manager feedback on how the sales/service executive works</description>
        <label>Written agenda closely followed 4-days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Joint Field Work</label>
    <listViews>
        <fullName>Last_14_Days</fullName>
        <columns>NAME</columns>
        <columns>Physician__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Last 14 Days</label>
    </listViews>
    <listViews>
        <fullName>Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Physician__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Physician__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <label>Joint Field Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Joint Field Work</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Joint_Field_Work</fullName>
        <active>true</active>
        <label>APACSU Joint Field Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU</fullName>
        <active>true</active>
        <description>India SU joint field work record type</description>
        <label>INDSU</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>